Test Org - Speridian/src/objects/BA_Subgroup_Classes__c.object
<CustomObject>
    <fields>
        <fullName>ba_ClassID__c</fullName>
        <label>Class ID</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ClassStatus__c</fullName>
        <label>Class Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_EnrollableClass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollable Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_ProbationaryPeriod__c</fullName>
        <label>Probationary Period</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FOMF 60 Days</fullName>
                </value>
                <value>
                    <fullName>FOMF 90 Days</fullName>
                </value>
                <value>
                    <fullName>FOMF DOH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_TerminationDate__c</fullName>
        <label>Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Waive_Probationary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waive Probationary Period For Open Enrol</label>
        <type>Checkbox</type>
    </fields>
    <label>Subgroup Classes</label>
    <nameField>
        <label>Class Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subgroup Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>